--- a/series.conf
+++ b/series.conf
@@ -56681,6 +56681,7 @@
 	patches.suse/iio-pressure-mpl3115-Force-alignment-of-buffer.patch
 	patches.suse/iio-adc-rockchip_saradc-fix-missing-clk_disable_unpr.patch
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
+	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
