--- a/series.conf
+++ b/series.conf
@@ -56686,6 +56686,7 @@
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/cpufreq-st-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/cpufreq-loongson1-Add-missing-MODULE_ALIAS.patch
+	patches.suse/cpufreq-scpi-Add-missing-MODULE_ALIAS.patch
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
