--- a/series.conf
+++ b/series.conf
@@ -56678,6 +56678,7 @@
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
 	patches.suse/iio-buffer-Fix-demux-update.patch
+	patches.suse/iio-pressure-mpl3115-Force-alignment-of-buffer.patch
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
