--- a/series.conf
+++ b/series.conf
@@ -56679,6 +56679,7 @@
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
 	patches.suse/iio-buffer-Fix-demux-update.patch
 	patches.suse/iio-pressure-mpl3115-Force-alignment-of-buffer.patch
+	patches.suse/iio-adc-rockchip_saradc-fix-missing-clk_disable_unpr.patch
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
