--- a/series.conf
+++ b/series.conf
@@ -56660,6 +56660,7 @@
 	patches.suse/x86-mm-mem_encrypt-fix-definition-of-pmd_flags_dec_wp.patch
 	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
+	patches.suse/cw1200-fix-missing-destroy_workqueue-on-error-in-cw1.patch
 	patches.suse/ath6kl-fix-enum-conversion-warning.patch
 	patches.suse/ath10k-Fix-an-error-handling-path.patch
 	patches.suse/ath10k-Release-some-resources-in-an-error-handling-p.patch
