--- a/series.conf
+++ b/series.conf
@@ -56690,6 +56690,7 @@
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
 	patches.suse/Input-ads7846-fix-unaligned-access-on-7845.patch
 	patches.suse/Input-omap4-keypad-fix-runtime-PM-error-handling.patch
+	patches.suse/Input-cyapa_gen6-fix-out-of-bounds-stack-access.patch
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/cpufreq-st-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/cpufreq-loongson1-Add-missing-MODULE_ALIAS.patch
