--- a/series.conf
+++ b/series.conf
@@ -56685,6 +56685,7 @@
 	patches.suse/iio-pressure-mpl3115-Force-alignment-of-buffer.patch
 	patches.suse/iio-adc-rockchip_saradc-fix-missing-clk_disable_unpr.patch
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
+	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
