--- a/series.conf
+++ b/series.conf
@@ -56692,6 +56692,7 @@
 	patches.suse/staging-olpc_dcon-Do-not-call-platform_device_unregi.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
+	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
 	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
 	patches.suse/Input-ads7846-fix-unaligned-access-on-7845.patch
