--- a/series.conf
+++ b/series.conf
@@ -56673,6 +56673,7 @@
 	patches.suse/Bluetooth-Fix-null-pointer-dereference-in-hci_event_.patch
 	patches.suse/Bluetooth-btusb-Fix-detection-of-some-fake-CSR-contr.patch
 	patches.suse/mac80211-don-t-set-set-TDLS-STA-bandwidth-wider-than.patch
+	patches.suse/nfc-s3fwrn5-Release-the-nfc-firmware.patch
 	patches.suse/ALSA-hda-Fix-regressions-on-clear-and-reconfig-sysfs.patch
 	patches.suse/ALSA-hda-ca0132-Fix-AE-5-rear-headphone-pincfg.patch
 	patches.suse/ALSA-hda-ca0132-Change-Input-Source-enum-strings.patch
