--- a/series.conf
+++ b/series.conf
@@ -56705,6 +56705,7 @@
 	patches.suse/cpufreq-loongson1-Add-missing-MODULE_ALIAS.patch
 	patches.suse/cpufreq-scpi-Add-missing-MODULE_ALIAS.patch
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
+	patches.suse/PCI-Fix-pci_slot_release-NULL-pointer-dereference.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
