--- a/series.conf
+++ b/series.conf
@@ -56664,6 +56664,7 @@
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
+	patches.suse/mwifiex-fix-mwifiex_shutdown_sw-causing-sw-reset-fai.patch
 	patches.suse/cw1200-fix-missing-destroy_workqueue-on-error-in-cw1.patch
 	patches.suse/ath6kl-fix-enum-conversion-warning.patch
 	patches.suse/ath10k-Fix-an-error-handling-path.patch
