--- a/series.conf
+++ b/series.conf
@@ -56683,6 +56683,7 @@
 	patches.suse/ASoC-wm8998-Fix-PM-disable-depth-imbalance-on-error.patch
 	patches.suse/ASoC-arizona-Fix-a-wrong-free-in-wm8997_probe.patch
 	patches.suse/ASoC-cx2072x-Fix-doubly-definitions-of-Playback-and-.patch
+	patches.suse/serial-8250_omap-Avoid-FIFO-corruption-caused-by-MDR.patch
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
 	patches.suse/iio-buffer-Fix-demux-update.patch
