--- a/series.conf
+++ b/series.conf
@@ -56703,6 +56703,7 @@
 	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-from-def.patch
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-from-MSN.patch
+	patches.suse/platform-x86-dell-smbios-base-Fix-error-return-code-.patch
 	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
 	patches.suse/Input-ads7846-fix-unaligned-access-on-7845.patch
