--- a/series.conf
+++ b/series.conf
@@ -56697,6 +56697,7 @@
 	patches.suse/spi-spi-mem-fix-reference-leak-in-spi_mem_access_sta.patch
 	patches.suse/spi-spi-ti-qspi-fix-reference-leak-in-ti_qspi_setup.patch
 	patches.suse/spi-tegra20-slink-fix-reference-leak-in-slink-ops-of.patch
+	patches.suse/spi-tegra20-sflash-fix-reference-leak-in-tegra_sflas.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
 	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
