--- a/series.conf
+++ b/series.conf
@@ -56704,6 +56704,7 @@
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-from-def.patch
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-from-MSN.patch
 	patches.suse/platform-x86-dell-smbios-base-Fix-error-return-code-.patch
+	patches.suse/platform-x86-mlx-platform-Fix-item-counter-assignmen.patch
 	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
 	patches.suse/Input-ads7846-fix-unaligned-access-on-7845.patch
