--- a/series.conf
+++ b/series.conf
@@ -56701,6 +56701,7 @@
 	patches.suse/spi-tegra20-slink-fix-reference-leak-in-slink-ops-of.patch
 	patches.suse/spi-tegra20-sflash-fix-reference-leak-in-tegra_sflas.patch
 	patches.suse/spi-tegra114-fix-reference-leak-in-tegra-spi-ops.patch
+	patches.suse/spi-bcm63xx-hsspi-fix-missing-clk_disable_unprepare-.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
 	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
