--- a/series.conf
+++ b/series.conf
@@ -56684,6 +56684,7 @@
 	patches.suse/ASoC-arizona-Fix-a-wrong-free-in-wm8997_probe.patch
 	patches.suse/ASoC-cx2072x-Fix-doubly-definitions-of-Playback-and-.patch
 	patches.suse/usb-chipidea-ci_hdrc_imx-Pass-DISABLE_DEVICE_STREAMI.patch
+	patches.suse/usb-ehci-omap-Fix-PM-disable-depth-umbalance-in-ehci.patch
 	patches.suse/serial-8250_omap-Avoid-FIFO-corruption-caused-by-MDR.patch
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
