--- a/series.conf
+++ b/series.conf
@@ -56703,6 +56703,7 @@
 	patches.suse/spi-tegra114-fix-reference-leak-in-tegra-spi-ops.patch
 	patches.suse/spi-bcm63xx-hsspi-fix-missing-clk_disable_unprepare-.patch
 	patches.suse/spi-pic32-Don-t-leak-DMA-channels-in-probe-error-pat.patch
+	patches.suse/spi-davinci-Fix-use-after-free-on-unbind.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
 	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
