--- a/series.conf
+++ b/series.conf
@@ -56689,6 +56689,7 @@
 	patches.suse/USB-serial-keyspan_pda-fix-dropped-unthrottle-interr.patch
 	patches.suse/USB-serial-keyspan_pda-fix-write-deadlock.patch
 	patches.suse/USB-serial-keyspan_pda-fix-stalled-writes.patch
+	patches.suse/USB-serial-keyspan_pda-fix-write-wakeup-use-after-fr.patch
 	patches.suse/serial-8250_omap-Avoid-FIFO-corruption-caused-by-MDR.patch
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
