--- a/series.conf
+++ b/series.conf
@@ -56796,6 +56796,7 @@
 	patches.suse/iio-adc-rockchip_saradc-fix-missing-clk_disable_unpr.patch
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
 	patches.suse/staging-olpc_dcon-Do-not-call-platform_device_unregi.patch
+	patches.suse/irqchip-alpine-msi-Fix-freeing-of-interrupts-on-allo.patch
 	patches.suse/regmap-Remove-duplicate-type-field-from-regmap-regca.patch
 	patches.suse/spi-img-spfi-fix-reference-leak-in-img_spfi_resume.patch
 	patches.suse/spi-spi-mem-Fix-passing-zero-to-PTR_ERR-warning.patch
