--- a/series.conf
+++ b/series.conf
@@ -56572,6 +56572,7 @@
 	patches.suse/perf-core-fix-a-memory-leak-in-perf_event_parse_addr_filter.patch
 	patches.suse/x86-speculation-allow-ibpb-to-be-conditionally-enabled-on-cpus-with-always-on-stibp.patch
 	patches.suse/xfs-flush-new-eof-page-on-truncate-to-avoid-post-eof.patch
+	patches.suse/usb-gadget-goku_udc-fix-potential-crashes-in-probe.patch
 	patches.suse/USB-Add-NO_LPM-quirk-for-Kingston-flash-drive.patch
 	patches.suse/usb-mtu3-fix-panic-in-mtu3_gadget_stop.patch
 	patches.suse/USB-serial-option-add-Quectel-EC200T-module-support.patch
