--- a/series.conf
+++ b/series.conf
@@ -56708,6 +56708,7 @@
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 	patches.suse/gpio-mvebu-fix-potential-user-after-free-on-probe.patch
 	patches.suse/pinctrl-merrifield-Set-default-bias-in-case-no-parti.patch
+	patches.suse/pinctrl-baytrail-Avoid-clearing-debounce-value-when-.patch
 	patches.suse/x86-mm-mem_encrypt-fix-definition-of-pmd_flags_dec_wp.patch
 	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 	patches.suse/drm-gma500-fix-double-free-of-gma_connector.patch
