--- a/series.conf
+++ b/series.conf
@@ -56729,6 +56729,7 @@
 	patches.suse/media-v4l2-async-Fix-trivial-documentation-typo.patch
 	patches.suse/media-platform-add-missing-put_device-call-in-mtk_jp.patch
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
+	patches.suse/media-sunxi-cir-ensure-IR-is-handled-when-it-is-cont.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
 	patches.suse/media-gspca-Fix-memory-leak-in-probe.patch
