--- a/series.conf
+++ b/series.conf
@@ -56652,6 +56652,7 @@
 	patches.suse/ibmvnic-fix-call_netdevice_notifiers-in-do_reset.patch
 	patches.suse/ibmvnic-notify-peers-when-failover-and-migration-hap.patch
 	patches.suse/iwlwifi-pcie-limit-memory-read-spin-time.patch
+	patches.suse/iwlwifi-mvm-fix-kernel-panic-in-case-of-assert-durin.patch
 	patches.suse/nfc-s3fwrn5-use-signed-integer-for-parsing-GPIO-numb.patch
 	patches.suse/net-ena-handle-bad-request-id-in-ena_netdev.patch
 	patches.suse/net-ena-fix-packet-s-addresses-for-rx_offset-feature.patch
