--- a/series.conf
+++ b/series.conf
@@ -56775,6 +56775,7 @@
 	patches.suse/USB-UAS-introduce-a-quirk-to-set-no_write_same.patch
 	patches.suse/USB-gadget-f_rndis-fix-bitrate-for-SuperSpeed-and-ab.patch
 	patches.suse/USB-gadget-f_acm-add-support-for-SuperSpeed-Plus.patch
+	patches.suse/USB-gadget-f_midi-setup-SuperSpeed-Plus-descriptors.patch
 	patches.suse/USB-serial-digi_acceleport-remove-in_interrupt-usage.patch
 	patches.suse/USB-serial-keyspan_pda-fix-dropped-unthrottle-interr.patch
 	patches.suse/USB-serial-keyspan_pda-fix-write-deadlock.patch
