--- a/series.conf
+++ b/series.conf
@@ -56711,6 +56711,7 @@
 	patches.suse/pinctrl-baytrail-Avoid-clearing-debounce-value-when-.patch
 	patches.suse/pinctrl-amd-remove-debounce-filter-setting-in-IRQ-ty.patch
 	patches.suse/Input-cros_ec_keyb-send-scancodes-in-addition-to-key.patch
+	patches.suse/Input-i8042-add-Acer-laptops-to-the-i8042-reset-list.patch
 	patches.suse/x86-mm-mem_encrypt-fix-definition-of-pmd_flags_dec_wp.patch
 	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 	patches.suse/drm-gma500-fix-double-free-of-gma_connector.patch
