--- a/series.conf
+++ b/series.conf
@@ -56706,6 +56706,7 @@
 	patches.suse/cfg80211-initialize-rekey_data.patch
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
+	patches.suse/gpio-mvebu-fix-potential-user-after-free-on-probe.patch
 	patches.suse/x86-mm-mem_encrypt-fix-definition-of-pmd_flags_dec_wp.patch
 	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 	patches.suse/drm-gma500-fix-double-free-of-gma_connector.patch
