--- a/series.conf
+++ b/series.conf
@@ -52603,6 +52603,7 @@
 	patches.suse/ath10k-fix-memory-leak.patch
 	patches.suse/ath10k-fix-backtrace-on-coredump.patch
 	patches.suse/ath9k_hw-fix-uninitialized-variable-data.patch
+	patches.suse/ath10k-fix-offchannel-tx-failure-when-no-ath10k_mac_.patch
 	patches.suse/ar5523-check-NULL-before-memcpy-in-ar5523_cmd.patch
 	patches.suse/mwifiex-pcie-Fix-memory-leak-in-mwifiex_pcie_alloc_c.patch
 	patches.suse/mwifiex-pcie-Fix-memory-leak-in-mwifiex_pcie_init_ev.patch
