--- a/series.conf
+++ b/series.conf
@@ -55090,6 +55090,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-micmute-LED-on-and-HP-system.patch
 	patches.suse/ALSA-hda-realtek-Add-LED-class-support-for-micmute-L.patch
 	patches.suse/ALSA-hda-realtek-Fix-unused-variable-warning-w-o-CON.patch
+	patches.suse/ALSA-isa-wavefront-prevent-out-of-bounds-write-in-io.patch
 	patches.suse/ALSA-usb-audio-Add-duplex-sound-support-for-USB-devi.patch
 	patches.suse/ALSA-usb-audio-Clean-up-quirk-entries-with-macros.patch
 	patches.suse/ALSA-hda-Add-ElkhartLake-HDMI-codec-vid.patch
