--- a/series.conf
+++ b/series.conf
@@ -56166,6 +56166,7 @@
 	patches.suse/bnxt_en-Protect-bnxt_set_eee-and-bnxt_set_pauseparam.patch
 	patches.suse/mac80211-do-not-allow-bigger-VHT-MPDUs-than-the-hard.patch
 	patches.suse/ALSA-asihpi-fix-iounmap-in-error-handler.patch
+	patches.suse/ALSA-hda-realtek-Couldn-t-detect-Mic-if-booting-with.patch
 	patches.suse/Revert-ALSA-usb-audio-Disable-Lenovo-P620-Rear-line-.patch
 	patches.suse/drm-vc4-vc4_hdmi-fill-ASoC-card-owner.patch
 	patches.suse/drm-sun4i-sun8i-csc-Secondary-CSC-register-correctio.patch
