--- a/series.conf
+++ b/series.conf
@@ -56073,6 +56073,7 @@
 	patches.suse/Revert-ALSA-hda-Add-support-for-Loongson-7A1000-cont.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Samsung-Galaxy-Book2.patch
 	patches.suse/ALSA-hda-hdmi-always-check-pin-power-status-in-i915-.patch
+	patches.suse/ALSA-hda-Fix-silent-audio-output-and-corrupted-input.patch
 	patches.suse/ALSA-hda-fix-a-runtime-pm-issue-in-SOF-when-integrat.patch
 	patches.suse/ALSA-hda-realtek-Improved-routing-for-Thinkpad-X1-7t.patch
 	patches.suse/dmaengine-of-dma-Fix-of_dma_router_xlate-s-of_dma_xl.patch
