--- a/series.conf
+++ b/series.conf
@@ -55312,6 +55312,7 @@
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-and-micmute-LED-suppor.patch
 	patches.suse/0010-ALSA-usb-audio-Add-registration-quirk-for-Kingston-H.patch
 	patches.suse/ALSA-usb-audio-add-quirk-for-Samsung-USBC-Headset-AK.patch
+	patches.suse/ALSA-usb-audio-Fix-OOB-access-of-mixer-element-list.patch
 	patches.suse/RDMA-efa-Set-maximum-pkeys-device-attribute.patch
 	patches.suse/RDMA-qedr-Fix-KASAN-use-after-free-in-ucma_event_han.patch
 	patches.suse/RDMA-cma-Protect-bind_list-and-listen_list-while-fin.patch
