--- a/series.conf
+++ b/series.conf
@@ -51927,6 +51927,7 @@
 	patches.suse/ALSA-hda-Apply-AMD-controller-workaround-for-Raven-p.patch
 	patches.suse/ALSA-hda-realtek-PCI-quirk-for-Medion-E4254.patch
 	patches.suse/ALSA-hda-Add-laptop-imic-fixup-for-ASUS-M9V-laptop.patch
+	patches.suse/ASoC-pcm3168a-The-codec-does-not-support-S32_LE.patch
 	patches.suse/ALSA-usb-audio-Add-DSD-support-for-EVGA-NU-Audio.patch
 	patches.suse/fuse-fix-missing-unlock_page-in-fuse_writepage.patch
 	patches.suse/fuse-fix-memleak-in-cuse_channel_open.patch
