--- a/series.conf
+++ b/series.conf
@@ -52601,6 +52601,7 @@
 	patches.suse/rtl8xxxu-prevent-leaking-urb.patch
 	patches.suse/cw1200-Fix-a-signedness-bug-in-cw1200_load_firmware.patch
 	patches.suse/ath10k-fix-memory-leak.patch
+	patches.suse/ath10k-fix-backtrace-on-coredump.patch
 	patches.suse/ath9k_hw-fix-uninitialized-variable-data.patch
 	patches.suse/ar5523-check-NULL-before-memcpy-in-ar5523_cmd.patch
 	patches.suse/mwifiex-pcie-Fix-memory-leak-in-mwifiex_pcie_alloc_c.patch
