--- a/series.conf
+++ b/series.conf
@@ -56602,6 +56602,7 @@
 	patches.suse/ALSA-hda-prevent-undefined-shift-in-snd_hdac_ext_bus.patch
 	patches.suse/ALSA-usb-audio-add-usb-vendor-id-as-DSD-capable-for-.patch
 	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-MODX.patch
+	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-Qu-16.patch
 	patches.suse/ceph-check-session-state-after-bumping-session-s_seq.patch
 	patches.suse/futex-Handle-transient-ownerless-rtmutex-state-corre.patch
 	patches.suse/perf-core-fix-a-memory-leak-in-perf_event_parse_addr_filter.patch
