--- a/series.conf
+++ b/series.conf
@@ -52667,6 +52667,7 @@
 	patches.suse/ALSA-cs4236-fix-error-return-comparison-of-an-unsign.patch
 	patches.suse/ALSA-hda-hdmi-Clear-codec-relaxed_resume-flag-at-unb.patch
 	patches.suse/ASoC-Jack-Fix-NULL-pointer-dereference-in-snd_soc_ja.patch
+	patches.suse/ASoC-wm8904-fix-regcache-handling.patch
 	patches.suse/ALSA-hda-realtek-Enable-internal-speaker-of-ASUS-UX4.patch
 	patches.suse/ALSA-usb-audio-Fix-Focusrite-Scarlett-6i6-gen1-input.patch
 	patches.suse/media-vivid-Set-vid_cap_streaming-and-vid_out_stream.patch
