--- a/series.conf
+++ b/series.conf
@@ -55596,6 +55596,7 @@
 	patches.suse/spi-sun4i-update-max-transfer-size-reported.patch
 	patches.suse/PM-devfreq-rk3399_dmc-Fix-kernel-oops-when-rockchip-.patch
 	patches.suse/cpufreq-intel_pstate-Fix-EPP-setting-via-sysfs-in-ac.patch
+	patches.suse/ACPICA-Do-not-increment-operation_region-reference-c.patch
 	patches.suse/PCI-hotplug-ACPI-Fix-context-refcounting-in-acpiphp_.patch
 	patches.suse/b43-Remove-uninitialized_var-usage.patch
 	patches.suse/rtlwifi-rtl8192cu-Remove-uninitialized_var-usage.patch
