--- a/series.conf
+++ b/series.conf
@@ -55289,6 +55289,7 @@
 	patches.suse/libceph-don-t-omit-recovery_deletes-in-target_copy.patch
 	patches.suse/0001-drm-i915-icl-Fix-hotplug-interrupt-disabling-after-s.patch
 	patches.suse/0001-drm-amdgpu-Replace-invalid-device-ID-with-a-valid-de.patch
+	patches.suse/ata-libata-Fix-usage-of-page-address-by-page_address.patch
 	patches.suse/0001-bcache-fix-potential-deadlock-problem-in-btree_gc_co.patch
 	patches.suse/block-Fix-use-after-free-in-blkdev_get.patch
 	patches.suse/loop-replace-kill_bdev-with-invalidate_bdev.patch
