--- a/series.conf
+++ b/series.conf
@@ -56712,6 +56712,7 @@
 	patches.suse/drm-msm-dsi_phy_10nm-implement-PHY-disabling.patch
 	patches.suse/media-mtk-vcodec-add-missing-put_device-call-in-mtk_.patch
 	patches.suse/media-v4l2-async-Fix-trivial-documentation-typo.patch
+	patches.suse/media-platform-add-missing-put_device-call-in-mtk_jp.patch
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
