--- a/series.conf
+++ b/series.conf
@@ -56716,6 +56716,7 @@
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
+	patches.suse/media-gspca-Fix-memory-leak-in-probe.patch
 	patches.suse/crypto-talitos-Fix-return-type-of-current_desc_hdr.patch
 	patches.suse/crypto-af_alg-avoid-undefined-behavior-accessing-sal.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
