--- a/series.conf
+++ b/series.conf
@@ -53651,6 +53651,7 @@
 	patches.suse/pinctrl-sh-pfc-sh7264-Fix-CAN-function-GPIOs.patch
 	patches.suse/pinctrl-sh-pfc-sh7269-Fix-CAN-function-GPIOs.patch
 	patches.suse/pinctrl-baytrail-Do-not-clear-IRQ-flags-on-direct-ir.patch
+	patches.suse/usb-dwc2-Fix-IN-FIFO-allocation.patch
 	patches.suse/usb-gadget-legacy-set-max_speed-to-super-speed.patch
 	patches.suse/usb-dwc3-turn-off-VBUS-when-leaving-host-mode.patch
 	patches.suse/usb-gadget-f_ncm-Use-atomic_t-to-track-in-flight-req.patch
