--- a/series.conf
+++ b/series.conf
@@ -54413,6 +54413,7 @@
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/NTB-Fix-an-error-in-get-link-status.patch
 	patches.suse/NTB-ntb_transport-Use-scnprintf-for-avoiding-potenti.patch
+	patches.suse/wireless-Use-offsetof-instead-of-custom-macro.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/net-ena-remove-set-but-not-used-variable-hash_key.patch
 	patches.suse/net-ena-ethtool-remove-redundant-non-zero-check-on-r.patch
