--- a/series.conf
+++ b/series.conf
@@ -52322,6 +52322,7 @@
 	patches.suse/usb-dwc3-remove-the-call-trace-of-USBx_GFLADJ.patch
 	patches.suse/USB-Skip-endpoints-with-0-maxpacket-length.patch
 	patches.suse/USB-ldusb-fix-ring-buffer-locking.patch
+	patches.suse/USB-ldusb-use-unsigned-size-format-specifiers.patch
 	patches.suse/USB-ldusb-fix-control-message-timeout.patch
 	patches.suse/0001-usbip-Fix-free-of-unallocated-memory-in-vhci-tx.patch
 	patches.suse/usb-storage-Revert-commit-747668dbc061-usb-storage-S.patch
