--- a/series.conf
+++ b/series.conf
@@ -52315,6 +52315,7 @@
 	patches.suse/scsi-qla2xxx-Fix-partial-flash-write-of-MBI.patch
 	patches.suse/scsi-qla2xxx-stop-timer-in-shutdown-path.patch
 	patches.suse/fix-memory-leak-in-large-read-decrypt-offload.patch
+	patches.suse/usb-fsl-Check-memory-resource-before-releasing-it.patch
 	patches.suse/usb-gadget-udc-atmel-Fix-interrupt-storm-in-FIFO-mod.patch
 	patches.suse/USB-ldusb-fix-ring-buffer-locking.patch
 	patches.suse/USB-ldusb-fix-control-message-timeout.patch
