--- a/series.conf
+++ b/series.conf
@@ -55634,6 +55634,7 @@
 	patches.suse/io-mapping-indicate-mapping-failure.patch
 	patches.suse/bnxt_en-Fix-race-when-modifying-pause-settings.patch
 	patches.suse/bnxt_en-Fix-completion-ring-sizing-with-TPA-enabled.patch
+	patches.suse/usb-hso-Fix-debug-compile-warning-on-sparc32.patch
 	patches.suse/ip6_gre-fix-null-ptr-deref-in-ip6gre_init_net.patch
 	patches.suse/hippi-Fix-a-size-used-in-a-pci_free_consistent-in-an.patch
 	patches.suse/ax88172a-fix-ax88172a_unbind-failures.patch
